#8 Creation character controller + service + openapi + update MyImage + fix tag issue on openapi
