# goodsmash-persist/src/main/java/mic/poulet/goodsmash/smash/model/ImageType.java
@@ -1,0 +1,6 @@
+package mic.poulet.goodsmash.smash.model;
+
+public enum ImageType {
+	IMAGE,
+	ICON
+}
